--- a/src/App.css
+++ b/src/App.css
@@ -110,6 +110,7 @@ input[type="number"] {
   width: 100%;
   max-width: 600px;
   background-color: #3b3b3b;
+  color: #f88e9f;
 }
 
 .details-btn {
