--- a/src/App.css
+++ b/src/App.css
@@ -130,6 +130,14 @@ input[type="number"] {
   transform: scale(1.05);
 }
 
+.alerts-container {
+  position: fixed;
+  top: 0px;
+  left: 20px;
+  width: 250px;
+  z-index: 1000;
+}
+
 @media (max-width: 576px) {
   .app-name {
     font-size: 36px;
