Add EventGenresChart code and css

--- a/src/App.css
+++ b/src/App.css
@@ -138,6 +138,11 @@ input[type="number"] {
   z-index: 1000;
 }
 
+.charts-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
 @media (max-width: 576px) {
   .app-name {
     font-size: 36px;
@@ -164,5 +169,9 @@ input[type="number"] {
 @media (max-width: 768px) {
   .event {
     max-width: 95%;
+  }
+  
+  .charts-container {
+    grid-template-columns: 1fr;
   }
 }
