--- a/src/App.css
+++ b/src/App.css
@@ -100,6 +100,10 @@ input[type="number"] {
   background-color: #bcdcdb;
 }
 
+.number-of-events {
+  color: #ffffffde;
+}
+
 .event {
   padding: 0px 10px 35px 10px;
   margin: 0 auto 10px auto;
