Updates for pie chart display #2

--- a/src/App.css
+++ b/src/App.css
@@ -15,9 +15,11 @@ body {
 .App {
   text-align: center;
   padding: 2% 5%;
-  max-width: 600px;
+  /* max-width: 600px; */
+  max-width: 900px;
   width: 100%;
   box-sizing: border-box;
+  margin: 0 auto; /* Potential fix */
 }
 
 .App * {
@@ -112,7 +114,8 @@ label {
   border-radius: 10px;
   position: relative;
   width: 100%;
-  max-width: 600px;
+  /* max-width: 600px; */
+  max-width: 900px;
   background-color: #3b3b3b;
   color: #f88e9f;
 }
